<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.b2international</groupId>
	<artifactId>fhir-core</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>FHIR Core Classes and Converters</name>
	<description>FHIR Core Classes and Converters (R4, R4B, R5)</description>
	<packaging>bundle</packaging>

	<properties>
		<!-- Build Configuration -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>17</java.version>

		<!-- Dependency Versions -->
		<hl7.fhir.version>6.3.25</hl7.fhir.version>
		<hapifhir.version>6.10.5</hapifhir.version>
		<gson.version>2.10.1</gson.version>
		<xpp3.version>1.1.4c</xpp3.version>

		<slf4j.version>2.0.11</slf4j.version>
		<guava.version>32.1.3-jre</guava.version>
		<jsr305.version>3.0.2</jsr305.version>
		<commons.lang3.version>3.12.0</commons.lang3.version>
		<commons.codec.version>1.16.1</commons.codec.version>
		<commons.io.version>2.15.0</commons.io.version>
		<commons.text.version>1.11.0</commons.text.version>

		<!-- Deployment -->
		<maven.repository.id>nexus_deployment</maven.repository.id>
		<maven.releases.repository>https://artifacts.b2ihealthcare.com/repository/maven-releases</maven.releases.repository>
		<maven.snapshots.repository>https://artifacts.b2ihealthcare.com/repository/maven-snapshots</maven.snapshots.repository>
	</properties>

	<dependencies>
		<!-- Dependencies to embed in the final bundle -->
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>org.hl7.fhir.convertors</artifactId>
			<version>${hl7.fhir.version}</version>
			<exclusions>
				<exclusion>
					<groupId>ca.uhn.hapi.fhir</groupId>
					<artifactId>org.hl7.fhir.dstu2016may</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ca.uhn.hapi.fhir</groupId>
					<artifactId>org.hl7.fhir.dstu2</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ca.uhn.hapi.fhir</groupId>
					<artifactId>org.hl7.fhir.dstu3</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.sf.saxon</groupId>
					<artifactId>Saxon-HE</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.xerial</groupId>
					<artifactId>sqlite-jdbc</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-net</groupId>
					<artifactId>commons-net</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>org.hl7.fhir.r4</artifactId>
			<version>${hl7.fhir.version}</version>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>org.hl7.fhir.r4b</artifactId>
			<version>${hl7.fhir.version}</version>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>org.hl7.fhir.r5</artifactId>
			<version>${hl7.fhir.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.nimbusds</groupId>
					<artifactId>nimbus-jose-jwt</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.sourceforge.plantuml</groupId>
					<artifactId>plantuml-mit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-base</artifactId>
			<version>${hapifhir.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-databind</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.fasterxml.jackson.datatype</groupId>
					<artifactId>jackson-datatype-jsr310</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
    		<groupId>xpp3</groupId>
    		<artifactId>xpp3</artifactId>
    		<version>${xpp3.version}</version>
		</dependency>

		<!-- Dependencies to depend on via MANIFEST.MF -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>${jsr305.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons.lang3.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons.codec.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons.io.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons.text.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.25.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>5.1.9</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>com.b2international.fhir.core</Bundle-SymbolicName>
						<Embed-Directory>lib</Embed-Directory>
						<Embed-Dependency>*;scope=compile</Embed-Dependency>
						<Embed-Transitive>true</Embed-Transitive>
						<!-- Control the explicit import package list as by default everything will be imported which is a lot -->
						<Import-Package>
							!com.ctc.wstx.stax.*,
							!com.fasterxml.jackson.*,
							!com.github.rjeschke.*,
							!com.helger.*,
							!com.nimbusds.*,
							!ca.uhn.fhir.*,
							!java.*,
							!javax.xml.*,
							!javax.imageio.*,
							!kotlin.*,
							!net.sf.saxon.*,
							!net.sourceforge.plantuml.*,
							!okhttp3.*,
							!okio.*,
							!org.apache.compress.*,
							!org.apache.commons.net.*,
							!org.apache.http.*,
							!org.apache.jena.*,
							!org.apache.poi.*,
							!org.codehaus.stax2.*,
							!org.commonmark.*,
							!org.hl7.fhir.dstu2016may.*,
							!org.hl7.fhir.dstu2.*,
							!org.hl7.fhir.dstu3.*,
							!org.fhir.ucum.*,
							!org.junit.*,
							!org.openxmlformats.*,
							!org.stringtemplate.*,
							!org.thymeleaf.*,
							!org.w3c.dom.*,
							!org.xml.sax.*,
							!org.xmlpull.v1.*,
							*
						</Import-Package>
						<!-- Using exportcontens directive instead of Export-Package header to prevent copying packages from embedded jars in the final bundle -->
						<_exportcontents>
							com.b2international.fhir.*,
							org.hl7.fhir.exceptions.*,
							org.hl7.fhir.utilities.*,
							org.hl7.fhir.r4.*,
							org.hl7.fhir.r4b.*,
							org.hl7.fhir.r5.*,
							org.hl7.fhir.convertors.conv40_50.*,
							org.hl7.fhir.convertors.conv43_50.*,
							org.hl7.fhir.convertors.factory
						</_exportcontents>
						<_noclassforname>true</_noclassforname>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>${maven.repository.id}</id>
			<url>${maven.releases.repository}</url>
		</repository>
		<snapshotRepository>
			<id>${maven.repository.id}</id>
			<url>${maven.snapshots.repository}</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<url>https://github.com/b2ihealthcare/fhir-core</url>
		<connection>scm:git:ssh://github.com/b2ihealthcare/fhir-core.git</connection>
		<developerConnection>scm:git:ssh@github.com:b2ihealthcare/fhir-core.git</developerConnection>
	</scm>

</project>